--- a/static/css/style.css
+++ b/static/css/style.css
@@ -463,7 +463,7 @@ body {
 
 .area h3 {
   margin-top: -.5vw;
-  font-size: 2.5vw;
+  font-size: 2.2vw;
   font-weight: 600;
   color: var(--dark-red);
 }
@@ -495,21 +495,49 @@ body {
 .timeline-details {
   margin-left: 15%;
   margin-top: 3%;
-  background-color: red;
   height: 25vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.before-imgs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 30%;
+}
+
+.before-imgs .fillet-img {
+  width: 15vw;
+  height: 100%;
+}
+
+.before-imgs .fillet-img:nth-child(1) {
+  margin-left: 13vw;
+}
+
+.before-imgs .fillet-img:nth-child(2) {
+  margin-left: 26vw;
+}
+
+.before-imgs img {
+  width: 100%;
+  height: auto;
+}
+
+.markers {
+  height: 40%;
 }
 
 .hr-solid {
   border-bottom: 2px solid black;
-  height: 50%;
   margin-left: 3vw;
-}
-
-.circle {
-  height: 50px;
-  width: 50px;
-  border-radius: 25px;
-  color: black;
+  height: 50%;
 }
 
 .v-lines {
@@ -518,30 +546,148 @@ body {
   display: flex;
 }
 
+.v-lines .dot {
+  height: .6vw;
+  width: .6vw;
+  background-color: var(--dark-red);
+  border-radius: .3vw;
+  margin-top: -.65vw;
+}
+
 .v-lines .vl {
-  border-left: 2px solid green;
-  height: 6px;
-  margin-top: -4px;
+  border-left: 2px solid var(--black);
+  height: 1.2vw;
+  margin-top: -.65vw;
 }
 
-.v-lines .vl:nth-child(1) {
-  margin-left: 12vw;
+.v-lines li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.v-lines .vl:nth-child(2) {
-  margin-left: 15vw;
+.v-lines h3 {
+  font-size: 2vw;
+  font-weight: 600;
 }
 
-.v-lines .vl:nth-child(3) {
-  margin-left: 22vw;
+.v-lines h6 {
+  font-size: 1vw;
+  font-weight: 600;
 }
 
-.v-lines .vl:nth-child(4) {
-  margin-left: 10vw;
+.v-lines li:nth-child(1) {
+  margin-left: 3vw;
+  margin-top: -3.3vw;
 }
 
-.v-lines .vl:nth-child(5) {
-  margin-left: 18vw;
+.v-lines li:nth-child(1) h3 {
+  margin-bottom: 1.2vw;
+  margin-left: -1.6vw;
+}
+
+.v-lines li:nth-child(2) {
+  margin-left: 7vw;
+}
+
+.v-lines li:nth-child(2) h6 {
+  margin-left: -2vw;
+}
+
+.v-lines li:nth-child(3) {
+  margin-left: 7vw;
+  margin-top: .25vw;
+}
+
+.v-lines li:nth-child(3) h3 {
+  margin-left: -1.6vw;
+}
+
+.v-lines li:nth-child(4) {
+  margin-left: 5.5vw;
+  margin-top: -2.5vw;
+}
+
+.v-lines li:nth-child(4) h6 {
+  margin-bottom: 1.2vw;
+  margin-left: -1.6vw;
+}
+
+.v-lines li:nth-child(5) {
+  margin-left: 11vw;
+  margin-top: -3.3vw;
+}
+
+.v-lines li:nth-child(5) h3 {
+  margin-bottom: 1.2vw;
+  margin-left: -1.6vw;
+}
+
+.v-lines li:nth-child(6) {
+  margin-left: 6.5vw;
+}
+
+.v-lines li:nth-child(6) h6 {
+  margin-left: -1.2vw;
+}
+
+.v-lines li:nth-child(7) {
+  margin-left: 7vw;
+  margin-top: -2.5vw;
+}
+
+.v-lines li:nth-child(7) h6 {
+  margin-bottom: 1.2vw;
+  margin-left: -1.6vw;
+}
+
+.v-lines li:nth-child(8) {
+  margin-left: 8vw;
+  margin-top: .25vw;
+}
+
+.v-lines li:nth-child(8) h3 {
+  margin-left: -1.6vw;
+}
+
+.v-lines li:nth-child(9) {
+  margin-left: 4vw;
+  margin-top: -2.5vw;
+}
+
+.v-lines li:nth-child(9) h6 {
+  margin-bottom: 1.2vw;
+  margin-left: -2.5vw;
+}
+
+.after-imgs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 30%;
+}
+
+.after-imgs .fillet-img {
+  width: 15vw;
+  height: 100%;
+  margin-top: 1.2vw;
+}
+
+.after-imgs .fillet-img:nth-child(1) {
+  margin-left: 32vw;
+}
+
+.after-imgs .fillet-img:nth-child(2) {
+  margin-left: 21vw;
+}
+
+.after-imgs img {
+  width: 100%;
+  height: auto;
 }
 
 .main-timeline-section {
