--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -423,8 +423,7 @@ body {
 // ####################################################################################
 // Timeline Section Starts
     .timeline {
-        width: 100%;
-        height: auto;
+        height: 100vh;
         background-color: var(--white-five);
         color: var(--black);
         font-family: Titillium Web, sans-serif;
@@ -432,7 +431,7 @@ body {
 
     .timeline-title {
         margin-left: 15%;
-        padding-top: 10%;
+        padding-top: 5%;
     }
 
     .timeline-title h1 {
@@ -443,13 +442,13 @@ body {
     .timeline-title p {
         font-size: 1vw;
         font-weight: 300;
-        padding-bottom: 6%;
+        padding-bottom: 3%;
     }
 
     .timeline-details {
         margin-left: 15%;
         margin-top: 3%;
-        height: 25vw;
+        height: 23vw;
         display: flex;
         flex-direction: column;
     }
@@ -474,6 +473,7 @@ body {
         img {
             width: 100%;
             height: auto;
+            border-radius: 2vw;
         }
     }
 
@@ -611,7 +611,7 @@ body {
         .fillet-img {
             width: 15vw;
             height: 100%;
-            margin-top: 1.2vw;
+            margin-top: .1vw;
         }
 
         .fillet-img:nth-child(1) {
@@ -625,6 +625,7 @@ body {
         img {
             width: 100%;
             height: auto;
+            border-radius: 2vw;
         }
     }
 
